Fixed overlapping text with divs, this time for sure.. really.

--- a/static/css/main_menu.css
+++ b/static/css/main_menu.css
@@ -37,12 +37,11 @@
     #nav-side-menu{
         background-color: darkred;
         max-height:30%;
-        position:fixed;
-
+        overflow:hidden;
     }
 
     #welcomeMessage{
-        padding-top:40%;
+        padding-top:10%;
         text-align:center;
         height:30%;
     }
